--- a/dashboard/app/views/index.scala.html
+++ b/dashboard/app/views/index.scala.html
@@ -20,7 +20,7 @@
             </div>  
           </div>
           <div class="form-group">
-            <label class="col-sm-2 control-label" for="valueType">Value type:</label>
+            <label class="col-sm-2 control-label" for="valueType">Value Type:</label>
             <div class="col-sm-10"> 
               <input type="text" class="form-control" name="valueType" />
             </div> 
