--- a/dashboard/app/views/main.scala.html
+++ b/dashboard/app/views/main.scala.html
@@ -28,8 +28,8 @@
           <div id="navbar" class="collapse navbar-collapse">
             <ul class="nav navbar-nav">
               <li class="active"><a href="#">Dashboard</a></li>
-              <!--<li><a href="#about">About</a></li>
-              <li><a href="#contact">Contact</a></li>-->
+              <li><a href="#about">Devices</a></li>
+              <!--<li><a href="#contact">Contact</a></li>-->
             </ul>
           </div>
         </div>
