--- a/dashboard/app/views/main.scala.html
+++ b/dashboard/app/views/main.scala.html
@@ -28,7 +28,7 @@
           <div id="navbar" class="collapse navbar-collapse">
             <ul class="nav navbar-nav">
               <li class="active"><a href="#">Dashboard</a></li>
-              <li><a href="#about">Devices</a></li>
+              <li><a href="devices">Devices</a></li>
               <!--<li><a href="#contact">Contact</a></li>-->
             </ul>
           </div>
