--- a/dashboard/app/views/index.scala.html
+++ b/dashboard/app/views/index.scala.html
@@ -1,6 +1,15 @@
 @(message: String)
 
 @main("Welcome to Play") {
+    <ul class="nav nav-pills" role="tablist">
+      <li role="presentation" class="active"><a href="#">Notifications 
+      <span class="badge">42</span></a></li>
+      <li role="presentation"><a href="#">Devices</a></li>
+      <li role="presentation"><a href="#">Gears
+      <span class="badge">3</span></a></li>
+    </ul>
+      <!--- que feio isso -->
+    <p></p>
     <div class="alert alert-success alert-dismissible" role="alert">
       <button type="button" class="close" data-dismiss="alert" aria-label="Close">
       <span aria-hidden="true">&times;</span></button>
