--- a/dashboard/app/views/main.scala.html
+++ b/dashboard/app/views/main.scala.html
@@ -23,12 +23,12 @@
               <span class="icon-bar"></span>
               <span class="icon-bar"></span>
             </button>
-            <a class="navbar-brand" href="#">{Sensor Simulator}</a>
+            <a class="navbar-brand" href="@routes.Application.index()">{Sensor Simulator}</a>
           </div>
           <div id="navbar" class="collapse navbar-collapse">
             <ul class="nav navbar-nav">
-              <li class="active"><a href="#">Dashboard</a></li>
-              <li><a href="devices">Devices</a></li>
+              <li class="active"><a href="@routes.Application.index()">Dashboard</a></li>
+              <li><a href="@routes.Devices.index()">Devices</a></li>
               <!--<li><a href="#contact">Contact</a></li>-->
             </ul>
           </div>
