--- a/dashboard/app/views/devices_/index.scala.html
+++ b/dashboard/app/views/devices_/index.scala.html
@@ -33,8 +33,7 @@
         </form>
       </div>
     </div>
-    <h1>Devices</h1>
-    <table class="table table-striped">
+<!--    <table class="table table-striped">
       <thead>
         <tr>
           <th>ID</th>
@@ -52,5 +51,5 @@
           <td></td>
         </tr>
       </tbody>
-    </table>
+    </table>-->
 }
