--- a/dashboard/app/views/main.scala.html
+++ b/dashboard/app/views/main.scala.html
@@ -10,7 +10,11 @@
         <link rel="stylesheet" media="screen" href="@routes.Assets.at("stylesheets/font-awesome.min.css")">
         <link rel="stylesheet" media="screen" href="@routes.Assets.at("stylesheets/starter-template.css")">
         <link rel="stylesheet" media="screen" href="@routes.Assets.at("stylesheets/main.css")">
+        <link rel="stylesheet" media="screen" href="@routes.Assets.at("stylesheets/examples.css")">
         <link rel="shortcut icon" type="image/png" href="@routes.Assets.at("images/favicon.png")">
+        <script src="@routes.Assets.at("javascripts/jquery-1.11.2.min.js")" type="text/javascript"></script>
+        <script src="@routes.Assets.at("javascripts/jquery.flot.min.js")" type="text/javascript"></script>
+        <script src="@routes.Assets.at("javascripts/bootstrap.min.js")" type="text/javascript"></script>
     </head>
     <body>
       <nav class="navbar navbar-inverse navbar-fixed-top">
@@ -29,7 +33,7 @@
             <ul class="nav navbar-nav">
               <li class="active"><a href="@routes.Application.index()">Dashboard</a></li>
               <li><a href="@routes.Devices.index()">Devices</a></li>
-              <!--<li><a href="#contact">Contact</a></li>-->
+              <li><a href="@routes.Graphics.index()">Real-time</a></li>
             </ul>
           </div>
         </div>
@@ -41,7 +45,5 @@
           @content
         </div>
       </div>
-      <script src="@routes.Assets.at("javascripts/jquery-1.11.2.min.js")" type="text/javascript"></script>
-      <script src="@routes.Assets.at("javascripts/bootstrap.min.js")" type="text/javascript"></script>
     </body>
 </html>
