--- a/dashboard/app/views/devices_/index.scala.html
+++ b/dashboard/app/views/devices_/index.scala.html
@@ -33,23 +33,97 @@
         </form>
       </div>
     </div>
-<!--    <table class="table table-striped">
-      <thead>
-        <tr>
-          <th>ID</th>
-          <th>Name</th>
-          <th>Value Type</th>
-          <th>UUID</th>
-          <th>Created At</th>
-          <th>Actions</th>
-        </tr>
-      </thead>
-      <tbody>
-        <tr>
-          <td></td>
-          <td></td>
-          <td></td>
-        </tr>
-      </tbody>
-    </table>-->
+
+    <div class="panel panel-primary">
+      <div class="panel-heading">
+        <h3 class="panel-title">Devices</h3>
+      </div>
+      <div class="panel-body">
+        <table class="table table-bordered table-striped">
+          <thead>
+            <tr>
+              <th>Description</th>          
+              <th>UUID</th>
+              <th>Place</th>
+              <th>Status</th>
+              <th>Actions</th>
+            </tr>
+          </thead>
+          <tbody>
+            <tr>
+              <td>Temperature Sensor T1</td>
+              <td>cd557b6b-1218-4843-8d29-7b608c9e95b3</td>
+              <td>Kitchen</td>
+              <td>
+                <span class="label label-success">Active</span>
+              </td>
+              <td>
+                <a class="btn btn-info btn-sm" href="#" role="button">View</a>
+                <a class="btn btn-danger btn-sm" href="#" role="button">Remove</a>
+              </td>
+            </tr>
+            <tr>
+              <td>Temperature Humidity Sensor TH1</td>
+              <td>48223f1b-03a6-4049-bc56-ed85c5e88b7d</td>
+              <td>Hall</td>
+              <td>
+                <span class="label label-success">Active</span>
+              </td>
+              <td>
+                <a class="btn btn-info btn-sm" href="#" role="button">View</a>
+                <a class="btn btn-danger btn-sm" href="#" role="button">Remove</a>
+              </td>
+            </tr>
+            <tr>
+              <td>Pressure Sensor P1</td>
+              <td>a7a25ef8-bd00-4d33-919f-79d2c5367a78</td>
+              <td>Room</td>
+              <td>
+                <span class="label label-success">Active</span>
+              </td>
+              <td>
+                <a class="btn btn-info btn-sm" href="#" role="button">View</a>
+                <a class="btn btn-danger btn-sm" href="#" role="button">Remove</a>
+              </td>
+            </tr>        
+            <tr>
+              <td>Temperature Sensor T2</td>
+              <td>ba875cf9-e33e-4994-886f-81cc018b76b6</td>
+              <td>Room</td>
+              <td>
+                <span class="label label-danger">Inactive</span>
+              </td>
+              <td>
+                <a class="btn btn-info btn-sm" href="#" role="button">View</a>
+                <a class="btn btn-danger btn-sm" href="#" role="button">Remove</a>
+              </td>
+            </tr>
+            <tr>
+              <td>Pressure Sensor P2</td>
+              <td>2390dd05-b6cc-4966-a5a9-1b7178b1c264</td>
+              <td>Bathroom</td>
+              <td>
+                <span class="label label-danger">Inactive</span>
+              </td>
+              <td>
+                <a class="btn btn-info btn-sm" href="#" role="button">View</a>
+                <a class="btn btn-danger btn-sm" href="#" role="button">Remove</a>
+              </td>
+            </tr>
+            <tr>
+              <td>Pressure Sensor P3</td>
+              <td>c67d378c-684b-455d-832c-d11820d4900a</td>
+              <td>Garden</td>
+              <td>
+                <span class="label label-success">Active</span>
+              </td>
+              <td>
+                <a class="btn btn-info btn-sm" href="#" role="button">View</a>
+                <a class="btn btn-danger btn-sm" href="#" role="button">Remove</a>
+              </td>
+            </tr>
+          </tbody>
+        </table>
+      </div>
+    </div>
 }
