--- a/dashboard/app/views/Devices/show.scala.html
+++ b/dashboard/app/views/Devices/show.scala.html
@@ -12,7 +12,7 @@
         <h3 class="panel-title">Add new device</h3>
       </div>
       <div class="panel-body">
-        <form class="form-horizontal" action="@routes.Devices.createDevice()" method="POST">
+        <form class="form-horizontal" action="@routes.Devices.save()" method="POST">
           <div class="form-group">
             <label class="col-sm-2 control-label" for="name">Name:</label>
             <div class="col-sm-10"> 
