--- a/dashboard/app/views/main.scala.html
+++ b/dashboard/app/views/main.scala.html
@@ -32,8 +32,8 @@
           <div id="navbar" class="collapse navbar-collapse">
             <ul class="nav navbar-nav">
               <li class="active"><a href="@routes.Application.index()">Dashboard</a></li>
-              <li><a href="@routes.Devices.index()">Devices</a></li>
-              <li><a href="@routes.Graphics.index()">Real-time</a></li>
+              <li><a href="@routes.Devices.show()">Devices</a></li>
+              <li><a href="@routes.Graphics.show()">Real-time</a></li>
             </ul>
           </div>
         </div>
